--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@ details[open] > summary::after { transform: rotate(90deg); }
     <summary>Custom Problems</summary>
 
     <div class='notebook-entry'>
+        <a href='notebooks/03_Coding/Leetcode/Custom Problems/Anagrams in a string sentence.html' target='_blank' rel='noopener noreferrer'>📓 Anagrams in a string sentence</a>
+        <div class='created-date'><span class='arrow'>&#x21B3;</span> 2025-07-11</div>
+    </div>
+                        
+
+    <div class='notebook-entry'>
         <a href='notebooks/03_Coding/Leetcode/Custom Problems/Reverse Sentence with Grammar Correction.html' target='_blank' rel='noopener noreferrer'>📓 Reverse sentence with grammar correction</a>
         <div class='created-date'><span class='arrow'>&#x21B3;</span> 2025-07-10</div>
     </div>
@@ -216,10 +222,10 @@ document.getElementById('searchBox').addEventListener('input', function () {
     folder.open = visibleNested && filter.length > 0;
   });
 });
-const last30DaysLabels = ["Jun 11", "Jun 12", "Jun 13", "Jun 14", "Jun 15", "Jun 16", "Jun 17", "Jun 18", "Jun 19", "Jun 20", "Jun 21", "Jun 22", "Jun 23", "Jun 24", "Jun 25", "Jun 26", "Jun 27", "Jun 28", "Jun 29", "Jun 30", "Jul 01", "Jul 02", "Jul 03", "Jul 04", "Jul 05", "Jul 06", "Jul 07", "Jul 08", "Jul 09", "Jul 10"];
-const last30DaysCounts = [0, 1, 0, 2, 0, 0, 0, 0, 4, 1, 4, 2, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 13];
+const last30DaysLabels = ["Jun 12", "Jun 13", "Jun 14", "Jun 15", "Jun 16", "Jun 17", "Jun 18", "Jun 19", "Jun 20", "Jun 21", "Jun 22", "Jun 23", "Jun 24", "Jun 25", "Jun 26", "Jun 27", "Jun 28", "Jun 29", "Jun 30", "Jul 01", "Jul 02", "Jul 03", "Jul 04", "Jul 05", "Jul 06", "Jul 07", "Jul 08", "Jul 09", "Jul 10", "Jul 11"];
+const last30DaysCounts = [1, 0, 2, 0, 0, 0, 0, 4, 1, 4, 2, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 13, 1];
 const monthDaysLabels = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31];
-const monthDaysCounts = [0, 0, 0, 0, 0, 0, 0, 2, 0, 13, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
+const monthDaysCounts = [0, 0, 0, 0, 0, 0, 0, 2, 0, 13, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
 window.addEventListener('DOMContentLoaded', () => {
   const ctxBar = document.getElementById('barChart').getContext('2d');
   new Chart(ctxBar, {
