--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@ details[open] > summary::after { transform: rotate(90deg); }
                         
 
     <div class='notebook-entry'>
+        <a href='notebooks/03_Coding/Leetcode/Hashing & Sets/347. Top K Frequent Elements - medium.html' target='_blank' rel='noopener noreferrer'>📓 347. top k frequent elements - medium</a>
+        <div class='created-date'><span class='arrow'>&#x21B3;</span> 2025-07-13</div>
+    </div>
+                        
+
+    <div class='notebook-entry'>
         <a href='notebooks/03_Coding/Leetcode/Hashing & Sets/49. Group Anagrams - medium.html' target='_blank' rel='noopener noreferrer'>📓 49. group anagrams - medium</a>
         <div class='created-date'><span class='arrow'>&#x21B3;</span> 2025-07-10</div>
     </div>
@@ -222,10 +228,10 @@ document.getElementById('searchBox').addEventListener('input', function () {
     folder.open = visibleNested && filter.length > 0;
   });
 });
-const last30DaysLabels = ["Jun 12", "Jun 13", "Jun 14", "Jun 15", "Jun 16", "Jun 17", "Jun 18", "Jun 19", "Jun 20", "Jun 21", "Jun 22", "Jun 23", "Jun 24", "Jun 25", "Jun 26", "Jun 27", "Jun 28", "Jun 29", "Jun 30", "Jul 01", "Jul 02", "Jul 03", "Jul 04", "Jul 05", "Jul 06", "Jul 07", "Jul 08", "Jul 09", "Jul 10", "Jul 11"];
-const last30DaysCounts = [1, 0, 2, 0, 0, 0, 0, 4, 1, 4, 2, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 13, 1];
+const last30DaysLabels = ["Jun 14", "Jun 15", "Jun 16", "Jun 17", "Jun 18", "Jun 19", "Jun 20", "Jun 21", "Jun 22", "Jun 23", "Jun 24", "Jun 25", "Jun 26", "Jun 27", "Jun 28", "Jun 29", "Jun 30", "Jul 01", "Jul 02", "Jul 03", "Jul 04", "Jul 05", "Jul 06", "Jul 07", "Jul 08", "Jul 09", "Jul 10", "Jul 11", "Jul 12", "Jul 13"];
+const last30DaysCounts = [2, 0, 0, 0, 0, 4, 1, 4, 2, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 13, 1, 0, 1];
 const monthDaysLabels = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31];
-const monthDaysCounts = [0, 0, 0, 0, 0, 0, 0, 2, 0, 13, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
+const monthDaysCounts = [0, 0, 0, 0, 0, 0, 0, 2, 0, 13, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
 window.addEventListener('DOMContentLoaded', () => {
   const ctxBar = document.getElementById('barChart').getContext('2d');
   new Chart(ctxBar, {
