--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ details[open] > summary::after { transform: rotate(90deg); }
 <h1 class='text-center mb-4'>Learning Notebooks</h1>
 <div class='text-center mb-4'>
   <a href='#productivity' class='btn btn-outline-primary btn-sm me-2'>📈 Jump to Productivity</a>
+  <a href='pyodide.html' class='btn btn-outline-primary btn-sm me-2'>🐍 Run Python</a>
 </div>
 <input type='text' id='searchBox' class='form-control mb-4' placeholder='🔍 Search notebooks...'>
 <div style='margin-top:10px; text-align:center;'>
@@ -62,6 +63,9 @@ details[open] > summary::after { transform: rotate(90deg); }
 </details>
 <details>
 <summary>03_Coding</summary>
+  <details>
+  <summary>JavaScript</summary>
+  </details>
   <details>
   <summary>Leetcode</summary>
     <details>
@@ -237,8 +241,8 @@ document.getElementById('searchBox').addEventListener('input', function () {
     folder.open = visibleNested && filter.length > 0;
   });
 });
-const last30DaysLabels = ["Jun 18", "Jun 19", "Jun 20", "Jun 21", "Jun 22", "Jun 23", "Jun 24", "Jun 25", "Jun 26", "Jun 27", "Jun 28", "Jun 29", "Jun 30", "Jul 01", "Jul 02", "Jul 03", "Jul 04", "Jul 05", "Jul 06", "Jul 07", "Jul 08", "Jul 09", "Jul 10", "Jul 11", "Jul 12", "Jul 13", "Jul 14", "Jul 15", "Jul 16", "Jul 17"];
-const last30DaysCounts = [0, 4, 1, 4, 2, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 13, 1, 0, 0, 1, 0, 0, 1];
+const last30DaysLabels = ["Jun 19", "Jun 20", "Jun 21", "Jun 22", "Jun 23", "Jun 24", "Jun 25", "Jun 26", "Jun 27", "Jun 28", "Jun 29", "Jun 30", "Jul 01", "Jul 02", "Jul 03", "Jul 04", "Jul 05", "Jul 06", "Jul 07", "Jul 08", "Jul 09", "Jul 10", "Jul 11", "Jul 12", "Jul 13", "Jul 14", "Jul 15", "Jul 16", "Jul 17", "Jul 18"];
+const last30DaysCounts = [4, 1, 4, 2, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 13, 1, 0, 0, 1, 0, 0, 1, 0];
 const monthDaysLabels = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31];
 const monthDaysCounts = [0, 0, 0, 0, 0, 0, 0, 2, 0, 13, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
 window.addEventListener('DOMContentLoaded', () => {
