--- a/pyodide.html
+++ b/pyodide.html
@@ -107,6 +107,9 @@
 
     async function main() {
       window.pyodide = await loadPyodide();
+      
+      await pyodide.loadPackage("pandas");
+      
       pyodideReady = true;
 
       try {
