--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@ details[open] > summary::after { transform: rotate(90deg); }
     <summary>datasets</summary>
     </details>
   </details>
+  <details>
+  <summary>Pandas</summary>
+
+    <div class='notebook-entry'>
+        <a href='notebooks/02_Data_Science/Pandas/Pandas Project Ideas.html' target='_blank' rel='noopener noreferrer'>📓 Pandas project ideas</a>
+        <div class='created-date'><span class='arrow'>&#x21B3;</span> 2025-08-02</div>
+    </div>
+                        
+
+    <div class='notebook-entry'>
+        <a href='notebooks/02_Data_Science/Pandas/Running CSV with Pyodide Code Editor.html' target='_blank' rel='noopener noreferrer'>📓 Running csv with pyodide code editor</a>
+        <div class='created-date'><span class='arrow'>&#x21B3;</span> 2025-08-02</div>
+    </div>
+                        
+  </details>
 </details>
 <details>
 <summary>03_Coding</summary>
@@ -272,10 +287,10 @@ document.getElementById('searchBox').addEventListener('input', function () {
     folder.open = visibleNested && filter.length > 0;
   });
 });
-const last30DaysLabels = ["Jun 20", "Jun 21", "Jun 22", "Jun 23", "Jun 24", "Jun 25", "Jun 26", "Jun 27", "Jun 28", "Jun 29", "Jun 30", "Jul 01", "Jul 02", "Jul 03", "Jul 04", "Jul 05", "Jul 06", "Jul 07", "Jul 08", "Jul 09", "Jul 10", "Jul 11", "Jul 12", "Jul 13", "Jul 14", "Jul 15", "Jul 16", "Jul 17", "Jul 18", "Jul 19"];
-const last30DaysCounts = [1, 4, 2, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 13, 1, 0, 0, 1, 0, 0, 1, 2, 3];
+const last30DaysLabels = ["Jul 06", "Jul 07", "Jul 08", "Jul 09", "Jul 10", "Jul 11", "Jul 12", "Jul 13", "Jul 14", "Jul 15", "Jul 16", "Jul 17", "Jul 18", "Jul 19", "Jul 20", "Jul 21", "Jul 22", "Jul 23", "Jul 24", "Jul 25", "Jul 26", "Jul 27", "Jul 28", "Jul 29", "Jul 30", "Jul 31", "Aug 01", "Aug 02", "Aug 03", "Aug 04"];
+const last30DaysCounts = [0, 0, 2, 0, 13, 1, 0, 0, 1, 0, 0, 1, 2, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0];
 const monthDaysLabels = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31];
-const monthDaysCounts = [0, 0, 0, 0, 0, 0, 0, 2, 0, 13, 1, 0, 0, 1, 0, 0, 1, 2, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
+const monthDaysCounts = [0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
 window.addEventListener('DOMContentLoaded', () => {
   const ctxBar = document.getElementById('barChart').getContext('2d');
   new Chart(ctxBar, {
