--- a/notebooks/02_Data_Science/Pandas/Running CSV with Pyodide Code Editor.html
+++ b/notebooks/02_Data_Science/Pandas/Running CSV with Pyodide Code Editor.html
@@ -7525,7 +7525,18 @@ a.anchor-link {
         
 </head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
-<main><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=9edc1fd3-293d-4ef8-bb24-7cec2c4e792e">
+<main>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=b6cc113b-d7fc-496e-b36b-75ebf0f3b05b">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h1 id="How-to-run-a-csv-dataset-in-the-pyodide-code-editor-on-the-home-screen">How to run a csv dataset in the pyodide code editor on the home screen<a class="anchor-link" href="#How-to-run-a-csv-dataset-in-the-pyodide-code-editor-on-the-home-screen">¶</a></h1>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=9edc1fd3-293d-4ef8-bb24-7cec2c4e792e">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
@@ -7537,12 +7548,41 @@ a.anchor-link {
 <span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
 <span class="kn">import</span> <span class="nn">io</span>
 
-<span class="n">url</span> <span class="o">=</span> <span class="s2">"https://brolo231.github.io/Learning-Notebooks/unclean_dataset.csv"</span>
+<span class="n">url</span> <span class="o">=</span> <span class="s2">"https://brolo231.github.io/Learning-Notebooks/datasets/unclean_dataset.csv"</span>
 <span class="n">response</span> <span class="o">=</span> <span class="n">open_url</span><span class="p">(</span><span class="n">url</span><span class="p">)</span>
 <span class="n">data_str</span> <span class="o">=</span> <span class="n">response</span><span class="o">.</span><span class="n">read</span><span class="p">()</span>
 
 <span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="n">io</span><span class="o">.</span><span class="n">StringIO</span><span class="p">(</span><span class="n">data_str</span><span class="p">),</span> <span class="n">on_bad_lines</span><span class="o">=</span><span class="s1">'skip'</span><span class="p">)</span>
 <span class="nb">print</span><span class="p">(</span><span class="n">df</span><span class="o">.</span><span class="n">head</span><span class="p">())</span>
+</pre></div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=ac725f3f-06e2-4e11-a49a-eed9b0822922">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<hr/>
+<h2 id="We-can-also-update-the-output-of-pandas-dataframes-with-the-following:">We can also update the output of pandas dataframes with the following:<a class="anchor-link" href="#We-can-also-update-the-output-of-pandas-dataframes-with-the-following:">¶</a></h2>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=8e58eef3-a432-43ee-a879-af0ac14bf71f">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span><span class="c1"># Set display options to show all columns</span>
+<span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">'display.max_columns'</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span>   <span class="c1"># Show all columns</span>
+<span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">'display.width'</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span>         <span class="c1"># Don't wrap lines based on screen width</span>
+<span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s1">'display.max_colwidth'</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span>  <span class="c1"># Show full content in each cell</span>
 </pre></div>
 </div>
 </div>
