--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Learning Notebooks</title>
 <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css' rel='stylesheet'>
 <style>
-body { background-color: #f8f9fa; font-family: 'Segoe UI', sans-serif; }
+body { background-color: rgb(45,45,45); font-family: 'Segoe UI', sans-serif; }
 h1 { font-weight: 700; font-size: 2.5rem; }
 .container { max-width: 900px; margin: 0 auto; }
 details { margin-bottom: 1rem; background: #fff; border-radius: 8px; padding: 1rem; box-shadow: 0 4px 12px rgba(0,0,0,0.05); }
