--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@ details[open] > summary::after { transform: rotate(90deg); }
         <div class='created-date'><span class='arrow'>&#x21B3;</span> 2025-08-09</div>
     </div>
                         
+
+    <div class='notebook-entry'>
+        <a href='notebooks/02_Data_Analysis/MySQL/HAVING.html' target='_blank' rel='noopener noreferrer'>📓 Having</a>
+        <div class='created-date'><span class='arrow'>&#x21B3;</span> 2025-08-09</div>
+    </div>
+                        
     <details>
     <summary>static</summary>
     </details>
@@ -312,9 +318,9 @@ document.getElementById('searchBox').addEventListener('input', function () {
   });
 });
 const last30DaysLabels = ["Jul 11", "Jul 12", "Jul 13", "Jul 14", "Jul 15", "Jul 16", "Jul 17", "Jul 18", "Jul 19", "Jul 20", "Jul 21", "Jul 22", "Jul 23", "Jul 24", "Jul 25", "Jul 26", "Jul 27", "Jul 28", "Jul 29", "Jul 30", "Jul 31", "Aug 01", "Aug 02", "Aug 03", "Aug 04", "Aug 05", "Aug 06", "Aug 07", "Aug 08", "Aug 09"];
-const last30DaysCounts = [1, 0, 0, 1, 0, 0, 1, 2, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 2, 0, 0, 2, 0, 1];
+const last30DaysCounts = [1, 0, 0, 1, 0, 0, 1, 2, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 2, 0, 0, 2, 0, 2];
 const monthDaysLabels = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31];
-const monthDaysCounts = [0, 2, 0, 2, 0, 0, 2, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
+const monthDaysCounts = [0, 2, 0, 2, 0, 0, 2, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
 window.addEventListener('DOMContentLoaded', () => {
   const ctxBar = document.getElementById('barChart').getContext('2d');
   new Chart(ctxBar, {
