--- a/notebooks/02_Data_Analysis/MySQL/Intermediate SQL/5. JOINS.html
+++ b/notebooks/02_Data_Analysis/MySQL/Intermediate SQL/5. JOINS.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>1. WHERE, LIKE</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>5. JOINS</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <style type="text/css">
     pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -7526,109 +7526,103 @@ a.anchor-link {
 </head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 <main>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=6648ec4c-2425-405d-a521-acab2026dd01">
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=2e2979aa-7b93-485d-9728-36ac638c888c">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<style>
-@media (max-width: 600px) {
-    img[style] { width: 80% !important; }
-}
-</style>
-<h1 id="WHERE">WHERE<a class="anchor-link" href="#WHERE">¶</a></h1><hr/>
-<h4 id="The-WHERE-clause-is-used-to-filter-rows-from-a-table-that-meet-a-specific-condition.">The <strong>WHERE</strong> clause is used to filter rows from a table that meet a specific condition.<a class="anchor-link" href="#The-WHERE-clause-is-used-to-filter-rows-from-a-table-that-meet-a-specific-condition.">¶</a></h4><h4 id="Instead-of-selecting-all-rows,-you-can-narrow-down-your-results-based-on-criteria-like-job-title,-salary,-or-department.">Instead of selecting all rows, you can narrow down your results based on criteria like job title, salary, or department.<a class="anchor-link" href="#Instead-of-selecting-all-rows,-you-can-narrow-down-your-results-based-on-criteria-like-job-title,-salary,-or-department.">¶</a></h4><hr/>
-<p><strong>✅ Basic Syntax of WHERE</strong></p>
-<p><code>SELECT column1, column2</code><br/>
-<code>FROM table_name</code><br/>
-<code>WHERE condition;</code></p>
+<h1 id="JOINS">JOINS<a class="anchor-link" href="#JOINS">¶</a></h1><hr/>
+<h4 id="A-JOIN-in-MySQL-combines-rows-from-two-or-more-tables-based-on-a-related-column-between-them.">A JOIN in MySQL combines rows from two or more tables based on a related column between them.<a class="anchor-link" href="#A-JOIN-in-MySQL-combines-rows-from-two-or-more-tables-based-on-a-related-column-between-them.">¶</a></h4><h4 id="The-default-join-in-MySQL-workbench-is-INNER-JOIN">The default join in MySQL workbench is INNER JOIN<a class="anchor-link" href="#The-default-join-in-MySQL-workbench-is-INNER-JOIN">¶</a></h4><hr/>
+<img alt="No description has been provided for this image" src="static/MYSQL_JOINS.png" style="display: flex; width: 60%; margin:auto;"/>
+<p style="text-align: center;">full join == full outer join</p>
 <hr/>
-<h4 id=""><a class="anchor-link" href="#">¶</a></h4><p><strong>Parks_and_Recreation example:</strong></p>
-<p>We are:</p>
-<ul>
-<li>Selecting everything from the employee_salary table</li>
-<li>with the condition that salary must be greater than or equal to 50,000</li>
-</ul>
-<img alt="No description has been provided for this image" src="static/WHERE_01.png" style="width: 40%; margin: auto; display:block;"/>
-<h2 id=""><a class="anchor-link" href="#">¶</a></h2><p>We can also filter with multiple conditions:</p>
-<ul>
-<li>Selecting everything from the employee_salary table</li>
-<li>with the condition that salary must be greater than or equal to 50,000 and dept_id must be equal to 1</li>
-</ul>
-<img alt="No description has been provided for this image" src="static/WHERE_02.png" style="width: 40%; margin: auto;"/>
-<h2 id=""><a class="anchor-link" href="#">¶</a></h2><p>Additionally, we can incorporate parentheses into our conditions:</p>
-<ul>
-<li>By using parentheses, you explicitly group conditions, making your logic clear and accurate.</li>
-<li>you control the order of evaluation, just like in math.</li>
-</ul>
-<img alt="No description has been provided for this image" src="static/WHERE_03.png" style="width: 40%; margin: auto;"/>
-<h2 id=""><a class="anchor-link" href="#">¶</a></h2><hr/>
-<h1 id="LIKE">LIKE<a class="anchor-link" href="#LIKE">¶</a></h1><hr/>
-<h4 id="The-LIKE-clause-is-used-in-a-WHERE-condition-to-search-for-a-specified-pattern-in-a-column-(usually-text-or-VARCHAR-fields).">The LIKE clause is used in a WHERE condition to search for a specified pattern in a column (usually text or VARCHAR fields).<a class="anchor-link" href="#The-LIKE-clause-is-used-in-a-WHERE-condition-to-search-for-a-specified-pattern-in-a-column-(usually-text-or-VARCHAR-fields).">¶</a></h4><hr/>
-<p><strong>✅ Syntax:</strong></p>
-<p><code>SELECT column1, column2</code><br/>
-<code>FROM table_name</code><br/>
-<code>WHERE column_name LIKE 'pattern';</code></p>
+<p><strong>SYNTAX:</strong></p>
+<p><code>SELECT *</code><br/>
+<code>FROM employee_demographics AS dem</code> <strong>LEFT (first table)</strong><br/>
+<code>INNER JOIN employee_salary AS sal</code> <strong>RIGHT (second table)</strong><br/>
+<code>ON dem.employee_id = sal.employee_id</code><br/>
+<code>;</code></p>
 <hr/>
-<p><strong>🔡 SQL Wildcards Used with <code>LIKE</code></strong></p>
-<table>
-<thead>
-<tr>
-<th>Wildcard</th>
-<th>Meaning</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><code>%</code></td>
-<td>Any number of characters, including 0</td>
-</tr>
-<tr>
-<td><code>_</code></td>
-<td>Exactly one character</td>
-</tr>
-</tbody>
-</table>
-<hr/>
-<p><strong>Note:</strong></p>
-<p>MySQL table values can be case-sensitive, depending on the column’s collation settings. <br/>
-To ensure case-insensitive matching, use the LOWER() function on both sides of the comparison.</p>
+<h3 id="An-INNER-JOIN">An <strong>INNER JOIN</strong><a class="anchor-link" href="#An-INNER-JOIN">¶</a></h3><hr/>
 <ul>
-<li>The following returns all occupations that contain the word 'manager' regardless if it is Manager, MaNaGeR, or Assistant Manager</li>
+<li>Only returns rows where there’s a match in both tables.</li>
+<li>If no match exists, that row won’t appear in the result.</li>
+</ul>
+<p>In the following we are:</p>
+<ul>
+<li>selecting everything</li>
+<li>from employee_demographics with an alias of "dem",</li>
+<li>inner joining employee_demogrpahics as "sal"</li>
+<li>on the employee_id (column with similar/matching data)</li>
 </ul>
 <p><code>SELECT *</code><br/>
-<code>FROM employee_salary</code><br/>
-<code>WHERE LOWER(occupation) LIKE '%manager%';</code></p>
-<hr/>
-<h4 id=""><a class="anchor-link" href="#">¶</a></h4><p>We are:</p>
+<code>FROM employee_demographics AS dem</code><br/>
+<code>INNER JOIN employee_salary AS sal</code> <br/>
+<code>ON dem.employee_id = sal.employee_id</code><br/>
+<code>;</code></p>
+<p><strong>Note:</strong> Ron Swanson with employee_id value "2" does not appear in the output. This is because an Inner Join only joins/ outputs selected data on values that appear in both tables. So in employee_salary Ron Swanson is there and has an employee_id of "2" but he does not appear employee_demographics.</p>
+<img alt="No description has been provided for this image" src="static/INNER_JOIN_01.png" style="width: 90%; margin: auto;"/>
+<h4 id=""><a class="anchor-link" href="#">¶</a></h4><hr/>
+<h3 id="OUTER-JOINS---LEFT-and-RIGHT">OUTER JOINS - <strong>LEFT</strong> and <strong>RIGHT</strong><a class="anchor-link" href="#OUTER-JOINS---LEFT-and-RIGHT">¶</a></h3><hr/>
+<p>A <strong>LEFT JOIN</strong> is going to take everything from the left table, even if there are no matches in the right table, and return any matches from the right table. Vice versa for <strong>RIGHT JOIN</strong></p>
+<p>We are:</p>
 <ul>
-<li>Querying everything</li>
-<li>from employee_salary</li>
-<li>where the first_name value contains 'on' regardless of the position, leading or trailing characters.</li>
+<li>selecting everything</li>
+<li>from employee_demographics as 'dem'</li>
+<li>outer right joining on employee_salary as 'sal'</li>
+<li>on the common column - employee_id</li>
 </ul>
-<img alt="No description has been provided for this image" src="static/LIKE_01.png" style="width: 40%; margin: auto;"/>
-<h2 id=""><a class="anchor-link" href="#">¶</a></h2><p>Or we can:</p>
+<p><code>SELECT *</code><br/>
+<code>FROM employee_demographics AS dem</code><br/>
+<code>RIGHT JOIN employee_salary AS sal</code><br/>
+<code>ON dem.employee_id = sal.employee_id</code><br/>
+<code>;</code></p>
+<p><strong>Note:</strong> Previously we did an INNER JOIN on these tables (only returning rows with matching employee_id in both tables) and noticed that ron swanson was excluded from the output because he did not have an employee_id in both tables. Now that we are doing an OUTER RIGHT JOIN (right join is everything from right table and then matching values from left table on employee_id) he now appears in the output</p>
+<img alt="No description has been provided for this image" src="static/OUTER_RIGHT_JOIN_01.png" style="width: 90%; margin: auto;"/>
+<h4 id=""><a class="anchor-link" href="#">¶</a></h4><hr/>
+<h3 id="SELF-JOIN">SELF JOIN<a class="anchor-link" href="#SELF-JOIN">¶</a></h3><hr/>
+<p>A self join is when you join the same table to itself.</p>
+<p><strong>Line 9 explained: (ON sal1.employee_id + 1 = sal2.employee_id)</strong></p>
 <ul>
-<li>Query first and last name</li>
-<li>from employee_salary</li>
-<li>where first_name starts with an 'a' and has to have 2 characters after it. ( _ 1, _ 2)</li>
+<li>ON sal1.employee_id + 1 = sal2.employee_id</li>
+<li>The join condition: for each row in sal1, find the row in sal2 whose employee_id equals sal1.employee_id + 1.</li>
+<li>Practically, that pairs id 1 → 2, 2 → 3, etc. If there is no employee_id exactly one greater, that sal1 row is excluded (because it’s an inner join).</li>
 </ul>
-<img alt="No description has been provided for this image" src="static/LIKE_02.png" style="width: 40%; margin: auto;"/>
-</div>
-</div>
-</div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=62a0a26e-8832-45ee-8422-0af897f9c3b5">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-<div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span> 
-</pre></div>
-</div>
+<p><code>SELECT sal1.first_name AS secret_santa,</code><br/>
+<code>sal1.last_name as secret_santa,</code><br/>
+<code>sal1.employee_id,</code><br/>
+<code>sal2.first_name as emp_name,</code><br/>
+<code>sal2.last_name as emp_surname,</code><br/>
+<code>sal2.employee_id</code><br/>
+<code>FROM employee_salary AS sal1</code><br/>
+<code>JOIN employee_salary AS sal2</code><br/>
+<code>ON sal1.employee_id + 1 = sal2.employee_id</code><br/>
+<code>;</code></p>
+<p><strong>Note:</strong> From the explanation of line 9 above if we had ON sal1.employee_id <strong><span style="color: red;">-</span></strong> 1 = sal2.employee_id instead of '+' then we would need to match values from the right table to the left table where employee_id - 1 = left.employee_id 
+since the first value is 1 in employee_id there is no emoloyee_id with 0 so therefore it is skipped. 2 - 1 = 1 however so employee_id with value 2 will match with employee_id with 1</p>
+<img alt="No description has been provided for this image" src="static/SELF_JOIN_01.png" style="width: 60%; margin: auto;"/>
+<h4 id=""><a class="anchor-link" href="#">¶</a></h4><hr/>
+<h3 id="MULTIPLE-TABLE-JOINS">MULTIPLE TABLE JOINS<a class="anchor-link" href="#MULTIPLE-TABLE-JOINS">¶</a></h3><hr/>
+<p>We can JOIN multiple tables together</p>
+<p>We are:</p>
+<ul>
+<li>selecting everything</li>
+<li>from employee_dem as dem</li>
+<li>inner joining semployee_sal as sal</li>
+<li>on employee_id</li>
+<li>then joining parks_departments as dep</li>
+<li>on the related column dept_id from employee_salary</li>
+</ul>
+<p><strong>Note:</strong> Even though department id is not included in employee_demographics it is included in employee_salary so we can join a third table together with this relation.</p>
+<p><code>SELECT *</code><br/>
+<code>FROM employee_demographics AS dem</code><br/>
+<code>INNER JOIN employee_salary as sal</code><br/>
+<code>ON dem.employee_id = sal.employee_id</code><br/>
+<code>INNER JOIN parks_departments as dep</code><br/>
+<code>ON dep.department_id = sal.dept_id</code><br/>
+<code>;</code></p>
+<img alt="No description has been provided for this image" src="static/MULTIPLE_JOINS.png" style="width: 90%; margin: auto;"/>
 </div>
 </div>
 </div>
